Make all uses of pending consistent.
* Execute pending examples and mark as failed if they succeed.
* Removed pending with a block.
* Introduce `skip` method and metadata for old pending behaviour.

This is a backwards-incompatible change.

Implements #1208.

--- a/spec/rspec/core/formatters/html_formatted-2.1.0.html
+++ b/spec/rspec/core/formatters/html_formatted-2.1.0.html
@@ -296,11 +296,8 @@ a {
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_3" class="passed">with content that would fail</dt>
-    <script type="text/javascript">makeYellow('rspec-header');</script>
-    <script type="text/javascript">makeYellow('div_group_3');</script>
-    <script type="text/javascript">makeYellow('example_group_3');</script>
     <script type="text/javascript">moveProgressBar('28.5');</script>
-    <dd class="example not_implemented"><span class="not_implemented_spec_name">is pending (PENDING: No reason given)</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">is pending</span><span class='duration'>n.nnnns</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
@@ -388,7 +385,7 @@ expected: 2
   </dl>
 </div>
 <script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>n.nnnn seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "7 examples, 4 failures, 2 pending";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "7 examples, 4 failures, 1 pending";</script>
 </div>
 </div>
 </body>
