--- a/spec/rspec/core/formatters/html_formatted-1.9.3.html
+++ b/spec/rspec/core/formatters/html_formatted-1.9.3.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <title>RSpec results</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Expires" content="-1" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <style type="text/css">
+<title>RSpec results</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Expires" content="-1">
+<meta http-equiv="Pragma" content="no-cache">
+<style type="text/css">
   body {
     margin: 0;
     padding: 0;
@@ -13,7 +12,7 @@
     font-size: 80%;
   }
   </style>
-  <script type="text/javascript">
+<script type="text/javascript">
     // <![CDATA[
 
 function addClass(element_id, classname) {
@@ -91,8 +90,7 @@ function assign_display_style_for_group(classname, display_flag, subgroup_flag) 
 }
 
     // ]]>
-  </script>
-  <style type="text/css">
+  </script><style type="text/css">
 #rspec-header {
   background: #65C400; color: #fff; height: 4em;
 }
@@ -266,14 +264,14 @@ a {
   </div>
 
   <div id="display-filters">
-    <input id="passed_checkbox"  name="passed_checkbox"  type="checkbox" checked="checked" onchange="apply_filters()" value="1" /> <label for="passed_checkbox">Passed</label>
-    <input id="failed_checkbox"  name="failed_checkbox"  type="checkbox" checked="checked" onchange="apply_filters()" value="2" /> <label for="failed_checkbox">Failed</label>
-    <input id="pending_checkbox" name="pending_checkbox" type="checkbox" checked="checked" onchange="apply_filters()" value="3" /> <label for="pending_checkbox">Pending</label>
+    <input id="passed_checkbox" name="passed_checkbox" type="checkbox" checked onchange="apply_filters()" value="1"><label for="passed_checkbox">Passed</label>
+    <input id="failed_checkbox" name="failed_checkbox" type="checkbox" checked onchange="apply_filters()" value="2"><label for="failed_checkbox">Failed</label>
+    <input id="pending_checkbox" name="pending_checkbox" type="checkbox" checked onchange="apply_filters()" value="3"><label for="pending_checkbox">Pending</label>
   </div>
 
   <div id="summary">
-    <p id="totals">&#160;</p>
-    <p id="duration">&#160;</p>
+    <p id="totals"> </p>
+    <p id="duration"> </p>
   </div>
 </div>
 
@@ -281,54 +279,32 @@ a {
 <div class="results">
 <div id="div_group_1" class="example_group passed">
   <dl style="margin-left: 0px;">
-  <dt id="example_group_1" class="passed">pending spec with no implementation</dt>
-    <script type="text/javascript">makeYellow('rspec-header');</script>
-    <script type="text/javascript">makeYellow('div_group_1');</script>
-    <script type="text/javascript">makeYellow('example_group_1');</script>
-    <script type="text/javascript">moveProgressBar('14.2');</script>
-    <dd class="example not_implemented"><span class="not_implemented_spec_name">is pending (PENDING: Not yet implemented)</span></dd>
+<dt id="example_group_1" class="passed">pending spec with no implementation</dt>
+    <script type="text/javascript">makeYellow('rspec-header');</script><script type="text/javascript">makeYellow('div_group_1');</script><script type="text/javascript">makeYellow('example_group_1');</script><script type="text/javascript">moveProgressBar('14.2');</script><dd class="example not_implemented"><span class="not_implemented_spec_name">is pending (PENDING: Not yet implemented)</span></dd>
   </dl>
 </div>
 <div id="div_group_2" class="example_group passed">
   <dl style="margin-left: 0px;">
-  <dt id="example_group_2" class="passed">pending command with block format</dt>
+<dt id="example_group_2" class="passed">pending command with block format</dt>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
-  <dt id="example_group_3" class="passed">with content that would fail</dt>
-    <script type="text/javascript">makeYellow('rspec-header');</script>
-    <script type="text/javascript">makeYellow('div_group_3');</script>
-    <script type="text/javascript">makeYellow('example_group_3');</script>
-    <script type="text/javascript">moveProgressBar('28.5');</script>
-    <dd class="example not_implemented"><span class="not_implemented_spec_name">is pending (PENDING: No reason given)</span></dd>
+<dt id="example_group_3" class="passed">with content that would fail</dt>
+    <script type="text/javascript">makeYellow('rspec-header');</script><script type="text/javascript">makeYellow('div_group_3');</script><script type="text/javascript">makeYellow('example_group_3');</script><script type="text/javascript">moveProgressBar('28.5');</script><dd class="example not_implemented"><span class="not_implemented_spec_name">is pending (PENDING: No reason given)</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
   <dl style="margin-left: 15px;">
-  <dt id="example_group_4" class="passed">with content that would pass</dt>
-    <script type="text/javascript">makeRed('rspec-header');</script>
-    <script type="text/javascript">makeRed('div_group_4');</script>
-    <script type="text/javascript">makeRed('example_group_4');</script>
-    <script type="text/javascript">moveProgressBar('42.8');</script>
-    <dd class="example pending_fixed">
+<dt id="example_group_4" class="passed">with content that would pass</dt>
+    <script type="text/javascript">makeRed('rspec-header');</script><script type="text/javascript">makeRed('div_group_4');</script><script type="text/javascript">makeRed('example_group_4');</script><script type="text/javascript">moveProgressBar('42.8');</script><dd class="example pending_fixed">
       <span class="failed_spec_name">fails</span>
       <span class="duration">n.nnnns</span>
       <div class="failure" id="failure_1">
         <div class="message"><pre>RSpec::Core::Pending::PendingExampleFixedError</pre></div>
-        <div class="backtrace"><pre>./spec/rspec/core/resources/formatter_specs.rb:18:in `block (3 levels) in &lt;top (required)&gt;'
-./spec/support/sandboxed_mock_space.rb:33:in `block in run'
-./spec/support/sandboxed_mock_space.rb:72:in `sandboxed'
-./spec/support/sandboxed_mock_space.rb:32:in `run'
-./spec/rspec/core/formatters/html_formatter_spec.rb:37:in `block (2 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `block (5 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `open'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `block (4 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:58:in `chdir'
-./spec/rspec/core/formatters/html_formatter_spec.rb:58:in `block (3 levels) in &lt;module:Formatters&gt;'
-./spec/support/sandboxed_mock_space.rb:38:in `sandboxed'</pre></div>
-    <pre class="ruby"><code><span class="linenum">16</span>  context <span class="string"><span class="delimiter">&quot;</span><span class="content">with content that would pass</span><span class="delimiter">&quot;</span></span> <span class="keyword">do</span>
-<span class="linenum">17</span>    it <span class="string"><span class="delimiter">&quot;</span><span class="content">fails</span><span class="delimiter">&quot;</span></span> <span class="keyword">do</span>
+        <div class="backtrace"><pre>./spec/rspec/core/resources/formatter_specs.rb:18</pre></div>
+    <pre class="ruby"><code><span class="linenum">16</span>  context <span class="string"><span class="delimiter">"</span><span class="content">with content that would pass</span><span class="delimiter">"</span></span> <span class="keyword">do</span>
+<span class="linenum">17</span>    it <span class="string"><span class="delimiter">"</span><span class="content">fails</span><span class="delimiter">"</span></span> <span class="keyword">do</span>
 <span class="offending"><span class="linenum">18</span>      pending <span class="keyword">do</span></span>
 <span class="linenum">19</span>        expect(<span class="integer">1</span>).to eq(<span class="integer">1</span>)
 <span class="linenum">20</span>      <span class="keyword">end</span></code></pre>
@@ -338,18 +314,16 @@ a {
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 0px;">
-  <dt id="example_group_5" class="passed">passing spec</dt>
-    <script type="text/javascript">moveProgressBar('57.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">passes</span><span class='duration'>n.nnnns</span></dd>
+<dt id="example_group_5" class="passed">passing spec</dt>
+    <script type="text/javascript">moveProgressBar('57.1');</script><dd class="example passed">
+<span class="passed_spec_name">passes</span><span class="duration">n.nnnns</span>
+</dd>
   </dl>
 </div>
 <div id="div_group_6" class="example_group passed">
   <dl style="margin-left: 0px;">
-  <dt id="example_group_6" class="passed">failing spec</dt>
-    <script type="text/javascript">makeRed('div_group_6');</script>
-    <script type="text/javascript">makeRed('example_group_6');</script>
-    <script type="text/javascript">moveProgressBar('71.4');</script>
-    <dd class="example failed">
+<dt id="example_group_6" class="passed">failing spec</dt>
+    <script type="text/javascript">makeRed('div_group_6');</script><script type="text/javascript">makeRed('example_group_6');</script><script type="text/javascript">moveProgressBar('71.4');</script><dd class="example failed">
       <span class="failed_spec_name">fails</span>
       <span class="duration">n.nnnns</span>
       <div class="failure" id="failure_2">
@@ -359,19 +333,9 @@ expected: 2
 
 (compared using ==)
 </pre></div>
-        <div class="backtrace"><pre>./spec/rspec/core/resources/formatter_specs.rb:33:in `block (2 levels) in &lt;top (required)&gt;'
-./spec/support/sandboxed_mock_space.rb:33:in `block in run'
-./spec/support/sandboxed_mock_space.rb:72:in `sandboxed'
-./spec/support/sandboxed_mock_space.rb:32:in `run'
-./spec/rspec/core/formatters/html_formatter_spec.rb:37:in `block (2 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `block (5 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `open'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `block (4 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:58:in `chdir'
-./spec/rspec/core/formatters/html_formatter_spec.rb:58:in `block (3 levels) in &lt;module:Formatters&gt;'
-./spec/support/sandboxed_mock_space.rb:38:in `sandboxed'</pre></div>
-    <pre class="ruby"><code><span class="linenum">31</span><span class="constant">RSpec</span>.describe <span class="string"><span class="delimiter">&quot;</span><span class="content">failing spec</span><span class="delimiter">&quot;</span></span> <span class="keyword">do</span>
-<span class="linenum">32</span>  it <span class="string"><span class="delimiter">&quot;</span><span class="content">fails</span><span class="delimiter">&quot;</span></span> <span class="keyword">do</span>
+        <div class="backtrace"><pre>./spec/rspec/core/resources/formatter_specs.rb:33</pre></div>
+    <pre class="ruby"><code><span class="linenum">31</span><span class="constant">RSpec</span>.describe <span class="string"><span class="delimiter">"</span><span class="content">failing spec</span><span class="delimiter">"</span></span> <span class="keyword">do</span>
+<span class="linenum">32</span>  it <span class="string"><span class="delimiter">"</span><span class="content">fails</span><span class="delimiter">"</span></span> <span class="keyword">do</span>
 <span class="offending"><span class="linenum">33</span>    expect(<span class="integer">1</span>).to eq(<span class="integer">2</span>)</span>
 <span class="linenum">34</span>  <span class="keyword">end</span>
 <span class="linenum">35</span><span class="keyword">end</span></code></pre>
@@ -381,44 +345,28 @@ expected: 2
 </div>
 <div id="div_group_7" class="example_group passed">
   <dl style="margin-left: 0px;">
-  <dt id="example_group_7" class="passed">a failing spec with odd backtraces</dt>
-    <script type="text/javascript">makeRed('div_group_7');</script>
-    <script type="text/javascript">makeRed('example_group_7');</script>
-    <script type="text/javascript">moveProgressBar('85.7');</script>
-    <dd class="example failed">
+<dt id="example_group_7" class="passed">a failing spec with odd backtraces</dt>
+    <script type="text/javascript">makeRed('div_group_7');</script><script type="text/javascript">makeRed('example_group_7');</script><script type="text/javascript">moveProgressBar('85.7');</script><dd class="example failed">
       <span class="failed_spec_name">fails with a backtrace that has no file</span>
       <span class="duration">n.nnnns</span>
       <div class="failure" id="failure_3">
         <div class="message"><pre>foo</pre></div>
-        <div class="backtrace"><pre>(erb):1:in `&lt;main&gt;'
-./spec/rspec/core/resources/formatter_specs.rb:41:in `block (2 levels) in &lt;top (required)&gt;'
-./spec/support/sandboxed_mock_space.rb:33:in `block in run'
-./spec/support/sandboxed_mock_space.rb:72:in `sandboxed'
-./spec/support/sandboxed_mock_space.rb:32:in `run'
-./spec/rspec/core/formatters/html_formatter_spec.rb:37:in `block (2 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `block (5 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `open'
-./spec/rspec/core/formatters/html_formatter_spec.rb:59:in `block (4 levels) in &lt;module:Formatters&gt;'
-./spec/rspec/core/formatters/html_formatter_spec.rb:58:in `chdir'
-./spec/rspec/core/formatters/html_formatter_spec.rb:58:in `block (3 levels) in &lt;module:Formatters&gt;'
-./spec/support/sandboxed_mock_space.rb:38:in `sandboxed'</pre></div>
+        <div class="backtrace"><pre>./spec/rspec/core/resources/formatter_specs.rb:41</pre></div>
     <pre class="ruby"><code><span class="linenum">-1</span><span class="comment"># Couldn't get snippet for (erb)</span></code></pre>
       </div>
     </dd>
-    <script type="text/javascript">moveProgressBar('100.0');</script>
-    <dd class="example failed">
+    <script type="text/javascript">moveProgressBar('100.0');</script><dd class="example failed">
       <span class="failed_spec_name">fails with a backtrace containing an erb file</span>
       <span class="duration">n.nnnns</span>
       <div class="failure" id="failure_4">
         <div class="message"><pre>Exception</pre></div>
-        <div class="backtrace"><pre>/foo.html.erb:1:in `&lt;main&gt;': foo (RuntimeError)</pre></div>
+        <div class="backtrace"><pre></pre></div>
     <pre class="ruby"><code><span class="linenum">-1</span><span class="comment"># Couldn't get snippet for /foo.html.erb</span></code></pre>
       </div>
     </dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>n.nnnn seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "7 examples, 4 failures, 2 pending";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>n.nnnn seconds</strong>";</script><script type="text/javascript">document.getElementById('totals').innerHTML = "7 examples, 4 failures, 2 pending";</script>
 </div>
 </div>
 </body>
